--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
     </script>
 </body>
 </html>
-
 </body>
 <style>
 /* Estilo Geral */
@@ -1014,7 +1013,7 @@ setTimeout(() => {
 if (chatChamada) {
     chatChamada.addEventListener('click', () => {
         console.log("Chat Call clicado! Redirecionando para o novo link...");
-        window.location.href = 'https://chatzapatendimento.github.io/cabe-alhorevis-onovo/'; // Substitua pelo link desejado
+        window.location.href = 'https://chatzapatendimento.github.io/minichatneurologic/'; // Substitua pelo link desejado
     });
 }
 
@@ -1027,7 +1026,7 @@ if (chatChamada) {
         if (testNowButton) {
             testNowButton.addEventListener('click', () => {
                 console.log("Botão 'Sim, testar agora' clicado!");
-                window.location.href = 'https://chatzapatendimento.github.io/cabe-alhorevis-onovo/'; // Link do Typebot
+                window.location.href = 'https://chatzapatendimento.github.io/minichatneurologic/'; // Link do Typebot
             });
         }
 
