--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@ setTimeout(() => {
 if (chatChamada) {
     chatChamada.addEventListener('click', () => {
         console.log("Chat Call clicado! Redirecionando para o novo link...");
-        window.location.href = 'https://chatzapatendimento.github.io/minichatneurologic/'; // Substitua pelo link desejado
+        window.location.href = 'https://chatzapatendimento.github.io/cabe-alho/'; // Substitua pelo link desejado
     });
 }
 
@@ -1026,7 +1026,7 @@ if (chatChamada) {
         if (testNowButton) {
             testNowButton.addEventListener('click', () => {
                 console.log("Botão 'Sim, testar agora' clicado!");
-                window.location.href = 'https://chatzapatendimento.github.io/minichatneurologic/'; // Link do Typebot
+                window.location.href = 'https://chatzapatendimento.github.io/cabe-alho/'; // Link do Typebot
             });
         }
 
